<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dono</string>
    <string name="app_dialog_title">dono</string>
    <string name="version">2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="welcome">explore</string>
    <string name="add_card">Add card</string>
    <string name="pay_bill">Pay bill</string>
    <string name="view_bill">View bill</string>
    <string name="view_payments">View payments</string>
    <string name="make_payment">Make a payment</string>
    <string name="explore">Explore</string>
    <string name="anim_zoom">Zoom</string>
    <string name="anim_scale">Scale</string>
    <string name="anim_fold">Fold</string>
    <string name="anim_slide">Slide Up</string>
    <string name="responsive_ui">Responsive UI</string>
    <string name="home_dining">Select your donation location</string>
    <string name="invoicePayString">Pay Bill</string>
    <string name="invoiceDollarSplit">$</string>
    <string name="invoicePercentSplit">÷</string>
    <string name="invoice_divider">************</string>
    <string name="invoice_subtotal">Sub Total</string>
    <string name="invoice_tax">Tax</string>
    <string name="invoice_service_charge">Service Charge</string>
    <string name="invoice_discount">Discount</string>
    <string name="invoice_amount_due">Amount Due</string>
    <string name="invoice_already_paid">Already Paid</string>
    <string name="title_activity_additional_tip">AdditionalTip</string>
    <string name="additional_tip_my_total">My Total:</string>
    <string name="additional_tip_my_tip">Tip:</string>
    <string name="continueString">Continue</string>
    <string name="eighteen_percent_text">18%</string>
    <string name="twenty_percent_text">20%</string>
    <string name="twentytwo_percent_text">22%</string>
    <string name="title_activity_confirm_payment">ConfirmPayment</string>
    <string name="confirm_pin_string">Please enter your PIN</string>
    <string name="confirm_make_payment">Confirm Donation</string>
    <string name="confirm_total">Total:</string>
    <string name="confirm_payment">Payment:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_review">Review</string>
    <string name="review_default_title">Please give the restaurant some feedback:</string>
    <string name="review_star_text">Click a star to rate your experience</string>
    <string name="revew_skip_text">Skip</string>
    <string name="review_submit">Submit</string>
    <string name="review_hint">Additional Comments:</string>
    <string name="title_activity_init">InitActivity</string>
    <string name="init_continue_string">By continuing you agree to the:</string>
    <string name="terms_string">Terms of Use</string>
    <string name="privacy_string">Privacy Policy</string>
    <string name="start_using_string">Start Using dono!</string>
    <string name="welcome_string">Welcome to dono!</string>
    <string name="step_one_text">1. Find your location.</string>
    <string name="step_two_text">2. Enter an amount.</string>
    <string name="step_three_text">3. Confirm your donation!</string>
    <string name="init_sub_title">Make a donation in 3 easy steps:</string>
    <string name="title_activity_support">Support</string>
    <string name="support_title">dono support</string>
    <string name="support_subtitle">Questions or Feedback?</string>
    <string name="send_email_button">Send Email</string>
    <string name="dutch_email">support@arcmobile.co</string>
    <string name="call_string">Call Now</string>
    <string name="dutch_phone">(708) 320-9272</string>
    <string name="receipt_description">Receipt Image</string>
    <string name="funds_secure_text">dono is 100% secure.  Your card information is encrypted with your personal PIN, and can only be accessed for purchases with your approval.</string>
    <string name="home_dining_new">Where are you dining today?</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="log_out_text">Sign Out</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="create_text">Create</string>
    <string name="log_in_text">Log In</string>
    <string name="logged_out_info">You are not currently logged in.  Please log in our create an account to continue.</string>
    <string name="title_activity_user_create">UserCreate</string>
    <string name="title_activity_user_login">UserLogin</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_user_create_new">UserCreateNew</string>
    <string name="register_string">Register Now!</string>
    <string name="register_title_string">Enter your email and create a password</string>
    <string name="title_activity_guest_create_customer">GuestCreateCustomer</string>
    <string name="guest_create_string">Would you like to create an account?</string>
    <string name="guest_create_explain">Dono will use your email only to send you receipts.  Your email address will never be shared for any reason.  If you choose to remain a guest, all of your donations will be made anonymously.</string>
    <string name="create_string">Create</string>
    <string name="nothanks_string">No Thanks</string>
    <string name="no_payments_string">No donations have been made on this invoice.</string>
    <string name="title_activity_terms">TermsActivity</string>
    <string name="check_help_string_one">Can\'t find your check #?</string>
    <string name="check_help_two">"Click the "</string>
    <string name="view_check_help_splitting">Splitting the Check!</string>
    <string name="view_check_help_item">To pay for a single item, just touch that item on your bill!</string>
    <string name="view_check_help_dollar_percent">To pay a dollar amount, or split evenly between a certain number of people, click here!</string>
    <string name="view_check_help_total">The amount you are about to pay will always be shown as \"My Total\" at the bottom of the page.</string>
    <string name="title_activity_edit_server">EditServer</string>
    <string name="edit_server_string">View/Change dono Server</string>
    <string name="new_server_string">Choose your new server:</string>
    <string name="view_check_help_item_hold">(press and hold to split a single item)</string>
    <string name="title_activity_payment_history">PaymentHistory</string>
    <string name="title_activity_payment_detail">PaymentDetail</string>
    <string name="paymentHistoryString">View Payment History</string>
    <string name="resendEmailString">Re-send Email Receipt</string>
    <string name="copyEmailString">A copy of this receipt will be sent to your email address</string>
    <string name="confirmationNumber">Confirmation #:</string>
    <string name="baseAmountString">Base Amount:</string>
    <string name="tipString">Tip:</string>
    <string name="paymentString">Payment:</string>
    <string name="checkNumberString">Check #:</string>
    <string name="notesString">Notes:</string>
    <string name="make_default_string">Make this my default donation location</string>
    <string name="show_options_text">Show Donation Options</string>
    <string name="show_options_explain">Turn this off if you would like to always let the church decide how your donation is spent.  Leave it on if you would like to see the donation options (when available).</string>
    <string name="turn_off_default_explain">Turn this off if you would like to clear your default church.</string>
    <string name="default_string">Default Church</string>
    <string name="title_activity_church_donation_type_single">ChurchDonationTypeSingle</string>
    <string name="title_activity_church_donation_type_multiple">ChurchDonationTypeMultiple</string>
    <string name="title_activity_church_donation_selector">ChurchDonationSelector</string>
    <string name="which_areas_string">Which areas would you like to donate to?</string>
    <string name="select_apply_string">(select all that apply)</string>
    <string name="how_much_donate">How much would you like to donate?</string>
    <string name="dollar_sign">$</string>
    <string name="pay_string">Donate Now!</string>
    <string name="fifty_string">$50</string>
    <string name="seventyfive_string">$75</string>
    <string name="hundred_string">$100</string>
    <string name="two_hundred_string">$200</string>
    <string name="quick_donate">Quick Donate:</string>
    <string name="how_much_donate_each">How much would you like to donate to each:</string>
    <string name="twentyfive_string">$25</string>
    <string name="fifteen_string">$15</string>
    <string name="donate_string">Donate</string>
    <string name="confirm_string">Please confirm your donation details</string>
    <string name="card_pin_string">Card PIN: (?)</string>
    <string name="anonymous_string">Make this donation anonymously</string>
    <string name="default_location_string">Make this my default location</string>
    <string name="title_activity_default_location">DefaultLocation</string>
    <string name="make_donation_string">Make Donation</string>
    <string name="view_locations_string">View All Locations</string>
    <string name="view_history_string">View Donation History</string>
    <string name="view_don_history">View Donation History</string>
    <string name="my_default_string">My default location</string>
    <string name="title_activity_funds_entry">FundsEntry</string>
    <string name="payment_info_string">Enter your payment information</string>
    <string name="card_number_placeholder">Card Number</string>
    <string name="expiration_placeholder">Exp. (mm/yy)</string>
    <string name="ccv_placeholder">CCV</string>
    <string name="scan_card_string">Scan Card</string>
    <string name="sign_up_string">Sign Up</string>
    <string name="rate_string">Enjoy dono?  Rate us!</string>
    <string name="rate_button">Rate dono!</string>
    <string name="confirm_signup_string">All donations made as a guest will be made anonymously.  Click here to sign up now!</string>
    <string name="title_activity_recurring_donation_initial">RecurringDonationInitial</string>
    <string name="title_activity_recurring_donation_final">RecurringDonationFinal</string>
    <string name="recurring_step_one">1.) Select a donation schedule</string>
    <string name="weekly_text">Weekly</string>
    <string name="recurring_step_two">2.) Add the schedule details</string>
    <string name="weekly_help_text">(ex: every Sunday)</string>
    <string name="monthly_text">Monthly</string>
    <string name="monthly_help_text">(ex: 4th of every month)</string>
    <string name="x_of_month_string">x day of the Month</string>
    <string name="x_of_month_help_string">(ex: 1st Sunday of every month)</string>
    <string name="step_three_string">3.) Donation Amount</string>
    <string name="submit_string">Submit</string>
    <string name="schedule_string">Schedule</string>
    <string name="register_only_string">Register</string>
    <string name="full_name_string">Full Name</string>
    <string name="profile_explain_name">Your display name will be automatically updated if you edit these fields</string>

</resources>