<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Support" >

    <TextView
        android:id="@+id/current_merchant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/titleTextTwo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:text="@string/support_subtitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button_email"
        style="@style/DonoOrangeStyle"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_below="@+id/current_merchant"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/dono_button_orange"
        android:onClick="emailNow"
        android:text="@string/send_email_button" />

    <TextView
        android:id="@+id/merchantNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/dutch_email"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/button_call"
        style="@style/DonoOrangeStyle"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_below="@+id/merchantNameText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/dono_button_orange"
        android:onClick="callNow"
        android:text="@string/call_string" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_call"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/dutch_phone"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/anonymousCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:text="@string/default_string" />

    <TextView
        android:id="@+id/titleTextTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/anonymousCheck"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/turn_off_default_explain"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/darkGray"
        android:textSize="10sp" />

</RelativeLayout>
