<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChurchDonationTypeSingle" >

    <TextView
        android:id="@+id/location_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_name_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/how_much_donate"
        android:textColor="@color/darkGray" />

    <TextView
        android:id="@+id/donation_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/select_apply_string"
        android:textColor="@color/darkGray"
        android:textSize="11sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donation_type"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText1"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/editText1"
        android:text="@string/dollar_sign"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button1"
        style="@style/CustomButton"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:background="@drawable/i_button_green"
        android:onClick="onContinueButtonClicked"
        android:text="@string/pay_string" />

    <RelativeLayout
        android:layout_width="287dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/button2"
            style="@style/CustomButton"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="0dp"
            android:background="@drawable/i_button_blue"
            android:onClick="onQuickOne"
            android:text="@string/fifty_string" />

        <Button
            android:id="@+id/Button01"
            style="@style/CustomButton"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/i_button_blue"
            android:text="@string/two_hundred_string" />

        <Button
            android:id="@+id/Button02"
            style="@style/CustomButton"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="9dp"
            android:layout_toRightOf="@+id/button2"
            android:background="@drawable/i_button_blue"
            android:onClick="onQuickTwo"
            android:text="@string/seventyfive_string" />

        <Button
            android:id="@+id/Button03"
            style="@style/CustomButton"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="9dp"
            android:layout_toRightOf="@+id/Button02"
            android:background="@drawable/i_button_blue"
            android:onClick="onQuickThree"
            android:text="@string/hundred_string" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/quick_donate"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</RelativeLayout>