<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserCreateNew" >

    <TextView
        android:id="@+id/remainingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/register_title_string"
        android:textAppearance="?android:attr/textAppearanceSmall" />

     <EditText
         android:id="@+id/new_email_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
         android:ems="10"
         android:hint="@string/email_hint"
         android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/new_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_email_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_email_text"
        android:layout_alignRight="@+id/new_email_text"
        android:layout_below="@+id/new_password_text"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/full_name_string"
        android:inputType="textCapWords" />

    <Button
        android:id="@+id/resendButton"
        style="@style/DonoOrangeStyle"
        android:layout_width="150dp"
        android:layout_height="46dp"
        android:layout_below="@+id/EditText01"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/dono_button_orange"
        android:onClick="onRegisterClicked"
        android:text="@string/register_string" />

</RelativeLayout>