<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AdditionalTip" >

    <TextView
        android:id="@+id/text_total_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/center_layout"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:gravity="right"
        android:text="$2932.20"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/amountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/my_tip_text"
        android:layout_toLeftOf="@+id/my_tip_text"
        android:gravity="right"
        android:text="@string/invoiceDollarSplit"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_enter_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_total_payment"
        android:layout_alignBottom="@+id/text_total_payment"
        android:layout_toLeftOf="@+id/center_layout"
        android:layout_marginRight="25dp"
        android:gravity="right"
        android:text="@string/additional_tip_my_total"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/current_merchant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/text_enter_pin"
        android:layout_below="@+id/text_enter_pin"
        android:layout_marginTop="26dp"
        android:gravity="right"
        android:text="@string/additional_tip_my_tip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/tip_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_tip_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_eightteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/eighteen_percent_text"
            android:onClick="onRadioButtonClicked"/>
            

        <RadioButton
            android:id="@+id/radio_twenty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/twenty_percent_text" 
            android:onClick="onRadioButtonClicked"/>
            

        <RadioButton
            android:id="@+id/radio_twenty_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twentytwo_percent_text"
            android:onClick="onRadioButtonClicked"/>
        
    </RadioGroup>

    <EditText
        android:id="@+id/my_tip_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/current_merchant"
        android:layout_alignRight="@+id/text_total_payment"
        android:ems="10"
        android:gravity="right|center_vertical"
        android:inputType="numberDecimal"
        android:maxWidth="100dp"
        android:textSize="22sp"
        android:width="80dp" >
             
        <requestFocus />
    </EditText>
        

    <Button
        android:id="@+id/button_email"
        style="@style/BlueButton"
        android:layout_width="204dp"
        android:layout_height="46dp"
        android:layout_below="@+id/tip_radio_group"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:background="@drawable/i_button_green"
        android:minHeight="48dp"
        android:onClick="onContinueButtonClicked"
        android:text="@string/continueString"
        android:width="150dp" />

    <RelativeLayout
        android:id="@+id/center_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_total_payment"
        android:layout_centerHorizontal="true" >

    </RelativeLayout>

</RelativeLayout>
